hphp/test/quick/closure_noscope_arg_use_ctx.php.expectf
object(foo) (2) {
  ["test":"foo":private]=>
  int(3)
  ["a"]=>
  object(Closure%s) (1) {
    ["static"]=>
    dict(1) {
      ["foo"]=>
      *RECURSION*
    }
  }
}
bool(true)
bool(true)

Fatal error: Cannot access private property foo::$test in %s on line 18
